<resources>
    <string name="app_name">BusiMap</string>
    <string name="txt_correo">Correo</string>
    <string name="txt_iniciar_sesion">Iniciar Sesión</string>
    <string name="txt_contrasena">Contraseña</string>
    <string name="txt_contrasenaRepeat">Repetir Contraseña</string>
    <string name="txt_registrarse">Registrarse</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_nickname">Nickname</string>
    <string name="txt_busqueda">Buscar lugar</string>


    <!--textos registrar moderador -->

    <string name="txt_contrasenaRepeat_moderador">Repetir Contraseña moderador</string>
    <string name="txt_registrarse_moderador">Registrar moderador</string>
    <string name="txt_nombre_moderador">Nombre del moderador</string>

    <string name="txt_restaurantes">restaurantes</string>
    <string name="txt_hoteles">hoteles</string>
    <string name="txt_almacen">almacen</string>
    <string name="txt_cafes">cafes</string>
    <string name="txt_bares">bares</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>

    <!-- Textos de crear lugar -->
    <string name="txt_nombre_lugar">Nombre del negocio</string>
    <string name="txt_descripcion_lugar">Descripción del negocio</string>
    <string name="txt_telefono_lugar">Teléfono del negocio</string>
    <string name="btn_crear_lugar">Crear nuevo negocio</string>
    <string name="btn_nuevo_lugar">Nuevo negocio</string>
    <string name="btn_direccion_lugar">Dirección del negocio</string>

    <!-- textos menu -->
    <string name="txt_home">Home</string>
    <string name="txt_mis_negocios">Mis negocios</string>
    <string name="txt_favoritos">Favoritos</string>
    <string name="txt_notificaciones">Notificaciones</string>
    <string name="txt_configuraciones">Configuraciones</string>
    <string name="txt_ayuda">Ayuda</string>


    <!-- textos header -->
    <string name="txt_nombreUser">Alma Marcela Gozo</string>
    <string name="txt_nickNameUser">Almita</string>

    <!-- textos header -->
    <string name="txt_crearModerador">Crear moderador</string>
    <string name="txt_eliminar_moderador">Eliminar moderador</string>

    <!-- Textos de validaciones -->
    <string name="es_obligatorio">Este campo es obligatorio</string>
    <string name="maximo_caracteres">Máximo 10 caracteres</string>
    <string name="datos_correctos">Los datos son correctos</string>
    <string name="datos_incorrectos">Los datos son incorrectos</string>
    <string name="value_map">AIzaSyBR_0katflK0bUCPbtoCHXvWF8ja1dmxVE</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- Textos detalle lugar -->
    <string name="info_lugar">Información del lugar</string>
    <string name="comentarios">Comentarios</string>
    <string name="escribir_comentario">Escribir comentario</string>
    <string name="comentar">Comentar</string>
    <string name="sin_comentarios">Aún no hay comentarios</string>
    <string name="comentario_realizado">Se ha enviado el comentario</string>
    <string name="comentario_error">Debe escribir el comentario y seleccionar las estrellas</string>
    <string name="abierto">Abierto</string>
    <string name="cerrado">Cerrado</string>

    <!-- Textos moderador -->
    <string name="deshacer">Deshacer</string>
    <string name="lugar_aceptado">¡Lugar aceptado!</string>
    <string name="lugar_rechazado">¡Lugar rechazado!</string>
    <string name="aceptar">Aceptar</string>
    <string name="rechazar">Rechazar</string>
    <string name="lugares_rechazados">lugares rechazados</string>
    <string name="perfil">Perfil</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="mas_opciones">Más opciones</string>

    <string name="abrir">Abrir</string>
    <string name="cerrar">Cerrar</string>
    <string name="logout">cerrar sesion</string>
    <string name="lugar_creado">Lugar creado</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_registroLugares">Registro de ubicaciones</string>
    <string name="horarios_del_lugar">horarios lugar</string>
    <string name="txt_olvide_contrasena">olvide contraseña</string>
    <string name="cambiar_idioma">Cambiar Idioma</string>
    <string name="txt_menu">Menu</string>
    <string name="recuperar_contrasena">Recuperar contraseña</string>
    <string name="anadir_favoritos">Añadir favoritos</string>
    <string name="bienvenido_administrador">Bienvenido administrador</string>
    <string name="txt_por_revisar">Pendiente</string>
    <string name="registro_denegados">Registro denegados</string>
    <string name="txt_registro_aceptados">Registro aceptados</string>
    <string name="horario_del_lugar">Horario lugar</string>
    <string name="hora_inicio">Hora inicio</string>
    <string name="hora_cierre">Hora cierre</string>
    <string name="agregar_horario">Agregar horario</string>
    <string name="lista_de_horario">Lista horarios</string>

    <string name="mensaje_mapa">Es necesario seleccionar una ubicación en el mapa</string>

    <!-- Validaciones -->
    <string name="sin_registros">Aún no hay registros</string>
    <string name="todos_obligatorios">Todos los campos son obligatorios</string>
</resources>