<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
    <item
        android:id="@+id/navHome"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/txt_home" />
        <item
            android:id="@+id/navMisNegocios"
            android:icon="@drawable/ic_baseline_add_business_24"
            android:title="@string/txt_mis_negocios" />
        <item
            android:id="@+id/navFavoritos"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/txt_favoritos" />
    </group>
    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navConfiguracion"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/txt_configuraciones" />


    </group>

</menu>