<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.HomeActivity"
    tools:openDrawer="end">


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/activity_nav_header"
        app:menu="@menu/menu" />


    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_imagen_mapa" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/texto_busqueda"
            android:layout_width="386dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/fondo_forms"
            android:drawableEnd="@drawable/ic_search"
            android:hint="@string/txt_busqueda"
            android:elevation="10dp"
            android:imeOptions="actionSearch"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/caja_buttom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="100dp"
                android:background="@drawable/fondo_forms"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_menu"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/font_awesome_solid_900"
                    android:text="\uf0c9"
                    android:textColor="@color/black"
                    android:textSize="29sp" />

                <Button
                    android:id="@+id/btn_mis_negocios"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/font_awesome_solid_900"
                    android:text="\uf0b1"
                    android:textColor="@color/black"
                    android:textSize="29sp" />

                <Button
                    android:id="@+id/btn_location"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/font_awesome_solid_900"
                    android:text="\uf3c5"
                    android:textColor="@color/black"
                    android:textSize="29sp" />
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">


        <Button
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/white"
            android:drawableRight="@drawable/ic_baseline_restaurant_24"
            android:text="@string/txt_restaurantes"
            android:elevation="20dp"
            android:textColor="@color/black"></Button>

        <Button
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/white"
            android:elevation="20dp"
            android:drawableRight="@drawable/ic_baseline_hotel_24"
            android:text="@string/txt_hoteles"
            android:textColor="@color/black" />

        <Button
            android:layout_width="190dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="70dp"
            android:backgroundTint="@color/white"
            android:elevation="20dp"
            android:drawableRight="@drawable/ic_baseline_home_work_24"
            android:text="@string/txt_almacen"
            android:textColor="@color/black"></Button>
    </LinearLayout>


</androidx.drawerlayout.widget.DrawerLayout>